--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -39,7 +39,8 @@
   "main": "./index.js",
   "browser": {
     ".": "./browser.js",
-    "tunnel": false
+    "tunnel": false,
+    "@applitools/screenshoter": false
   },
   "types": "./index.d.ts",
   "bin": {
@@ -84,8 +85,6 @@
     "@applitools/utils": "1.3.1",
     "axios": "0.26.0",
     "chalk": "3.0.0",
-    "dateformat": "3.0.3",
-    "deepmerge": "4.2.2",
     "tunnel": "0.0.6"
   },
   "devDependencies": {
