[cypress] Improve type definitions (#922)
* create types for cypress

* add changelog entry

* fix cypress ts project

* fix .d.ts references

* fix dep

* fix types

* fix the call to getConfig and use cypress major version 9 instead of latest

* fix tap file test

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>

--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -8,7 +8,7 @@
   },
   "license": "SEE LICENSE IN LICENSE",
   "main": "index.js",
-  "types": "./eyes-index.d.ts",
+  "types": "./index.d.ts",
   "bin": {
     "eyes-setup": "./bin/eyes-setup.js"
   },
@@ -18,7 +18,7 @@
     "bin",
     "index.js",
     "commands.js",
-    "eyes-index.d.ts"
+    "index.d.ts"
   ],
   "scripts": {
     "lint": "eslint \"**/*.js\"",
