--- a/packages/eyes-cypress/tsconfig.json
+++ b/packages/eyes-cypress/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src"],
+  "include": ["src", "./index.d.ts"],
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
