--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,17 +12,17 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
 "@applitools/eyes-selenium":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
 "@applitools/eyes-playwright":
   feature:
     - 
@@ -32,7 +32,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
 "@applitools/eyes-puppeteer":
   feature:
     - 
@@ -47,7 +47,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
 "@applitools/eyes-cypress":
   feature:
     - 
@@ -73,6 +73,7 @@ Apollo SDK:
     - Added support for drivers that return screenshots in jpeg format
     - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
     - Fix rounding error of image size when scaling introduces fractions
+    - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
 eyes-browser-extension:
   feature:
     - 
