[universal] Added alpine binary (#929)
* added alpine linux binaries

* @applitools/utils@1.3.4

* @applitools/sdk-release-kit@2.1.3

* @applitools/utils@1.3.5

* @applitools/sdk-release-kit@2.1.4

* cleanup

--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -32,10 +32,14 @@ inputs:
     description: report level
     type: string
     default: sandbox
+  shell:
+    description: shell to use
+    type: string
+    default: bash
 runs:
   using: composite
   steps:
-    - shell: bash
+    - shell: ${{inputs.shell}}
       working-directory: ./packages/${{inputs.package}}
       env:
         APPLITOOLS_TEST_REMOTE: ${{inputs.remote}}
