--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,7 +10,7 @@ Apollo SDK:
       An example of how to inline `markdown code highlights`
 "@applitools/eyes-universal":
   feature:
-    - 
+    - Added Alpine Linux binaries
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
 "@applitools/eyes-selenium":
