--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -44,8 +44,8 @@
     "build": "yarn build:dist && yarn build:bin",
     "build:dist": "tsc",
     "build:bin": "pkg .",
-    "build:zip": "zip -j ./bin/eyes-universal.zip ./bin/eyes-universal-linux ./bin/eyes-universal-macos ./bin/eyes-universal-win.exe",
-    "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
+    "build:zip": "zip -j ./bin/eyes-universal.zip ./bin/eyes-universal-alpine ./bin/eyes-universal-linux ./bin/eyes-universal-macos ./bin/eyes-universal-win.exe",
+    "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-alpine ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
     "test": "yarn test:it && yarn test:e2e",
     "test:unit": "mocha ./test/unit/*.spec.ts --exit --no-timeouts -r ts-node/register",
     "test:it": "echo 'mocha ./test/it/*.spec.js --no-timeouts'",
@@ -65,14 +65,14 @@
     "@applitools/execution-grid-client": "1.1.16",
     "@applitools/eyes-sdk-core": "13.6.29",
     "@applitools/logger": "1.1.8",
-    "@applitools/utils": "1.3.3",
+    "@applitools/utils": "1.3.5",
     "@applitools/visual-grid-client": "15.12.38",
     "webdriver": "7.16.11",
     "ws": "7.4.6",
     "yargs": "17.4.1"
   },
   "devDependencies": {
-    "@applitools/bongo": "^2.1.1",
+    "@applitools/bongo": "^2.1.4",
     "@applitools/sdk-coverage-tests": "^2.3.18",
     "@applitools/test-utils": "^1.3.2",
     "@applitools/types": "1.4.5",
@@ -101,6 +101,7 @@
     "scripts": "./dist/cli.js",
     "outputPath": "./bin",
     "targets": [
+      "node14-alpine-x64",
       "node14-linux-x64",
       "node14-macos-x64",
       "node14-win-x64"
