--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -20,49 +20,53 @@ Apollo SDK:
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
     - Fixed an issue with wrong cropped screenshots of elements out of viewport bounds on native devices
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
     - Fixed an issue with wrong cropped screenshots of elements out of viewport bounds on native devices
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-playwright":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-protractor":
   feature:
     - 
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
     - Fixed an issue with wrong cropped screenshots of elements out of viewport bounds on native devices
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-puppeteer":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-testcafe":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-nightwatch":
   feature:
     - 
   bug-fix:
     - Fixed the "Maximum Call Stack Size Exceeded" error when taking screenshots on iOS Safari
     - Fixed an issue with wrong cropped screenshots of elements out of viewport bounds on native devices
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-cypress":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-storybook":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed broken links to enums implmentation in the README.md
 "@applitools/eyes-webdriverio5-service":
   feature:
     - Support UFG for native mobile
