[Cypress] Throw an exception for CORS iframe and add the ability to send driver to check (#932)
* in case we are dealing with cors ifram, throw an exception from childContext and parentContext, add the option to send driver to check

* update pending-changes

* small adjustment

* adjust test name

* update pending-changes for universal

* Update packages/types/src/core.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* Update packages/eyes-sdk-core/lib/sdk/EyesClassic.js

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

* fix Kyrylo's notes

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>
Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,6 +10,7 @@ Apollo SDK:
       An example of how to inline `markdown code highlights`
 "@applitools/eyes-universal":
   feature:
+    - Add the option to send driver to check method
     - Added Alpine Linux binaries
     - Allowed `null` values in custom properties
   bug-fix:
@@ -78,6 +79,7 @@ Apollo SDK:
   feature:
     - Allowed `null` values in custom properties
   bug-fix:
+    - Fix incorrect test results when dealing with a page that contains CORS iframes
     - Fixed broken links to enums implementation in the README.md
 "@applitools/eyes-storybook":
   feature:
