[gh] update actions

--- a/.github/workflows/publish-snippets.yml
+++ b/.github/workflows/publish-snippets.yml
@@ -17,47 +17,29 @@ on:
         default: patch
         required: false
     secrets:
-      CVG_TESTS_EG_REMOTE:
-        required: true
-      APPLITOOLS_API_KEY:
-        required: true
-      APPLITOOLS_API_KEY_SDK:
-        required: true
-      APPLITOOLS_API_KEY_READ:
+      NPM_TOKEN:
         required: true
       SAUCE_USERNAME:
         required: true
       SAUCE_ACCESS_KEY:
         required: true
-      NPM_TOKEN:
-        required: true
-      AZURE_STORAGE_CONNECTION_STRING:
-        required: true
 env:
   CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
-  CVG_TESTS_EG_REMOTE: ${{secrets.CVG_TESTS_EG_REMOTE}}
-  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
-  APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
-  APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
+  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
   SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
-  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-  AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
   FORCE_COLOR: 3
 jobs:
   test:
-    strategy:
-      matrix:
-        node-version: ['16']
-    name: 'Test (node: ${{matrix.node-version}})'
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{matrix.node-version}}
+          node-version: lts/*
       - name: Run tests
         uses: ./.github/actions/tests
         with:
@@ -68,9 +50,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: lts/*
       - name: Publish to NPM
