--- a/.github/workflows/publish-universal.yml
+++ b/.github/workflows/publish-universal.yml
@@ -41,9 +41,9 @@ jobs:
       environments: ${{steps.prepare.outputs.environments}}
     steps:
       - name: Check-out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: lts/*
           registry-url: https://registry.npmjs.org
@@ -73,13 +73,13 @@ jobs:
             os: macos-latest
             shell: bash
     name: 'Test (os: ${{matrix.name}})'
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     container: ${{matrix.container}}
     steps:
       - name: Check-out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: lts/*
           registry-url: https://registry.npmjs.org
@@ -95,9 +95,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: lts/*
           registry-url: https://registry.npmjs.org
