--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -100,6 +100,7 @@
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "http-proxy": "^1.18.1",
     "husky": "^4.3.8",
     "mocha": "^10.0.0",
     "nock": "^13.0.4",
